Removed unnecessary code

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <script>
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyDXvfbhm-f209bEIqWe52mOP5BcFzIh9YM",
-    authDomain: "iot-demo-49c7b.firebaseapp.com",
-    databaseURL: "https://iot-demo-49c7b.firebaseio.com",
-    projectId: "iot-demo-49c7b",
-    storageBucket: "iot-demo-49c7b.appspot.com",
+    apiKey: "{ firebase API KEY }",
+    authDomain: "{ firebase Project Auth Domain ",
+    databaseURL: "{ firebase Project URL }",
+    projectId: "{ firebase Project ID }",
+    storageBucket: "{ firebase AppShot ",
     messagingSenderId: "805756173961"
   };
   firebase.initializeApp(config);
